syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.liftgate.protocol";
option java_outer_classname = "TransferProto";

package io.liftgate.protocol;

message MetaData {
  string name = 1;
  string type = 2;
}

message File {
  bytes content = 1;
}

enum TransferStatus {
  TRANSFER_PENDING = 0;
  TRANSFER_IN_PROGRESS = 1;
  TRANSFER_SUCCESS = 2;
  TRANSFER_FAILED = 3;
}

message FileUploadRequest {
  oneof request {
    MetaData metadata = 1;
    File file = 2;
  }
}

message FileUploadResponse {
  string name = 1;
  TransferStatus status = 2;
}

service FileService {
  rpc upload(stream FileUploadRequest) returns(FileUploadResponse);
}
